--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@wadewegner/mocli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A CLI to help build APIs",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://https://github.com/wadewegner/mocli"
+    "url": "https://github.com/wadewegner/mocli"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
